# ball-simulator

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  README.md  README_web.md  build.sh  custom.tmpl  deploy.sh  deploy_web.py  index.html  main.py  main_original.py  main_web.py  package.json  pygbag.tmpl  pyproject.toml  requirements.txt  setup.py  simple.tmpl  web.tmpl
.github/workflows/: deploy.yml
assets/: icon-gen.js
docs/: index.html
